(executables
 (names
  chap1_A_Guided_Tour
  chap2_Variables_and_Functions
  chap3_Lists_and_Patterns
  chap4_Files_Modules_and_Programs
  chap5_Records
  chap6_Variants
  chap7_Error_Handling
  chap8_Imperative_Programming
  chap9_GADTs
  chap10_Functors
  chap11_First_Class_Modules
  chap12_Objects
  chap13_Classes
  chap14_Maps_and_Hash_Tables
  chap15_Command_Line_Parsing
  chap16_Concurrent_Programming_with_Async)
 (preprocess
  (pps ppx_jane ppx_let))
 (public_names
  chap1
  chap2
  chap3
  chap4
  chap5
  chap6
  chap7
  chap8
  chap9
  chap10
  chap11
  chap12
  chap13
  chap14
  chap15
  chap16)
 (flags
  (:standard
   -g
   -w
   @A-4-7-27-32-33-37-40-41-42-43-34-44-60-69
   -warn-error
   -32-33-69))
 (libraries core_unix re core_unix.sys_unix core_unix.time_ns_unix async))
