(executable
 (name search)
 (public_name search)
 (preprocess
  (pps ppx_jane ppx_let))
 (flags
  (:standard
   -g
   -w
   @A-4-7-27-32-33-37-40-41-42-43-34-44-60-69
   -warn-error
   -32-33-69))
 (libraries
  core
  async
  core_unix.command_unix
  uri
  yojson
  cohttp
  cohttp-async
  textwrap))
